--- a/wordle.html
+++ b/wordle.html
@@ -111,14 +111,14 @@
                     <br>
                     <p>But I wanted to take this one step further to enhance my chances of getting it right (ideally on the third try). Fortunately, Wordle published a file containing all the possible correct solutions to each day's problem. There are in total 2,252 possible words. By analyzing this file, we can see what letters are used the more frequently overall:  </p>
                     <br>
+                                        <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/wordle-bar2.svg" class =graph><br>
+
                     <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/wordle-bar2.svg" class =graph><br>
                     <br>
                     <p>The letters E and A show up in about 20% of all Wordle solutions whereas letters such as Q and J show up in less than 2% of the times. A good strategy is to find a five letter word that contains some of the most frequent letters. The best word I can come up with is “OTHER” which has four letters in top five most frequently used. </p>
                     <br>
                     <p>Let’s take this one step further and look at what letters are the most common in each of the five sloths. Intuitively, we know that more words end rather than start with the letter Y but for other letters such as D and H it’s harder to imagine wherein a word they’re most likely to appear. The heatmap below shows the likelihood of each letter to appear in each of the five sloths. The darker the color, the more likely the letter is to be in a slot.</p>
                     <br>
-                   <!-- <img src="./img/wordle-heatmap6.svg" class =graph>-->
-                    <!-- <div class="flourish-embed flourish-heatmap" data-src="visualisation/8940363"><script src="https://public.flourish.studio/resources/embed.js"></script></div> -->
                     <p>The depth of the color represents the frequency of the letter used in one of the five slots. The deeper the color, the more frequently it appears. Some words are more likely to appear than others. Based on this analysis, likely words to appear are: sadly, shady, and shaky
                     </p>
                     <br>
