--- a/wordle.html
+++ b/wordle.html
@@ -111,7 +111,7 @@
                     <br>
                     <p>But I wanted to take this one step further to enhance my chances of getting it right (ideally on the third try). Fortunately, Wordle published a file containing all the possible correct solutions to each day's problem. There are in total 2,252 possible words. By analyzing this file, we can see what letters are used the more frequently overall:  </p>
                     <br>
-                                        <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/wordle-bar2.svg" class =graph><br>
+                                        <!-- <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/wordle-bar2.svg" class =graph><br> -->
 
                     <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/wordle-bar2.svg" class =graph><br>
                     <br>
