--- a/weather-project.html
+++ b/weather-project.html
@@ -75,11 +75,11 @@
                         </script><br>
                         <p>The result is that Denmark has much more gloomy weather than the U.S. Still, one should bear in mind that the U.S. is 228 times bigger than Denmark so conditions vary depending on state. Arizona, for instance, gets nearly 12 hours of daily sunshine whereas Washington State gets just 6 hours. But even Washington State manages to outperform Denmark in terms of good weather. </p><br>
                         <p>When it comes to comparing temperature, Denmark has chilly winters and comfortable summers. The U.S., on the other hand, is much more bipolar with extremely hot summers and freezing winters. This results in Denmark actually being warmer than the U.S. during the winter but colder during the summer. So which country has the most preferable temperature? It depends. If you want both a white Christmas and also pool-weather during the summer, then the U.S. might be the place for you. But if you want consistent gloomy weather that’s neither really hot nor incredibly cold, then you should settle in Denmark. </p><br>
-                            <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/colder-summers.svg" height=10%, width=80%, class =graph><br>
+                            <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/colder-summers2.svg" height=10%, width=80%, class =graph><br>
 
                         </script> <br>
                         <p>Lastly, we’re going to take a look at how much rainfall each country gets. Surprisingly, the U.S. gets much more rain than Denmark, despite also being sunnier. This is because the U.S. has much heavier rainfall than Denmark, so when it rains it really really rains compared to Denmark which has more consistent but lighter rainfall. </p><br>
-                            <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/dry3.svg" height=10%, width=80%, class =graph><br>
+                            <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/dry4.svg" height=10%, width=80%, class =graph><br>
 
                         </script><br>
                         <p>To conclude: Choosing between Denmark and the U.S.’s weather is like choosing between your overly hyped friend who experiences a lot of mood swings and your more chill friend who consistently is kind of boring. Personally, I think I’d prefer the former. </p><br>
